@@ -54,6 +54,7 @@ where XXXXXX is the bug number as listed below.
 383275  massif valgrind: m_xarray.c:162 (ensureSpaceXA): Assertion '!xa->arr' failed
 384096  Mention AddrCheck at Memcheck's command line option --undef-value-errors=no
 384526  reduce number of spill instructions generated by VEX register allocator v3
+384584  Callee saved registers listed first for AMD64, X86, and PPC architectures
 
 Release 3.13.0 (15 June 2017)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
